--- a/core/core_presentation/src/main/res/values/strings.xml
+++ b/core/core_presentation/src/main/res/values/strings.xml
@@ -2,4 +2,10 @@
     <string name="ip_address">IP Address</string>
     <string name="port_number">Port Number</string>
     <string name="next">Next</string>
+    <string name="edit">Edit</string>
+    <string name="enabled">Enabled</string>
+    <string name="disabled">Disabled</string>
+    <string name="unknown">Unknown</string>
+    <string name="save">Save</string>
+    <string name="back">Back</string>
 </resources>
