--- a/core/core_presentation/src/main/res/values-fr/strings.xml
+++ b/core/core_presentation/src/main/res/values-fr/strings.xml
@@ -8,4 +8,6 @@
     <string name="unknown">Inconu</string>
     <string name="save">Sauvegarder</string>
     <string name="back">Retour</string>
+    <string name="cancel">Annuler</string>
+    <string name="confirm">Confirmer</string>
 </resources>
