--- a/core/core_presentation/src/main/res/values/strings.xml
+++ b/core/core_presentation/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
     <string name="unknown">Unknown</string>
     <string name="save">Save</string>
     <string name="back">Back</string>
+    <string name="cancel">Cancel</string>
+    <string name="confirm">Confirm</string>
 </resources>
