--- a/core/core_presentation/src/main/res/values/strings.xml
+++ b/core/core_presentation/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
     <string name="ip_address">IP Address</string>
     <string name="port_number">Port Number</string>
+    <string name="url">URL</string>
+    <string name="name">Name</string>
     <string name="next">Next</string>
     <string name="edit">Edit</string>
     <string name="enabled">Enabled</string>
@@ -10,4 +12,9 @@
     <string name="back">Back</string>
     <string name="cancel">Cancel</string>
     <string name="confirm">Confirm</string>
+    <string name="error">Error</string>
+    <string name="retry">Retry</string>
+    <string name="download">Download</string>
+    <string name="playlists">Playlists</string>
+    <string name="serve_error">Server error : %1$s</string>
 </resources>
