--- a/setting/setting_presentation/src/main/res/values/strings.xml
+++ b/setting/setting_presentation/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
+    <string name="settings">Settings</string>
     <string name="server_info_title">Server Info</string>
     <string name="server_configuration_title">Server Configuration</string>
     <string name="download_occurrence_title">Download Occurrence</string>
