Fixed view model state for edit playlist.

--- a/playlist/playlist_presentation/src/main/res/values-fr/strings.xml
+++ b/playlist/playlist_presentation/src/main/res/values-fr/strings.xml
@@ -2,6 +2,7 @@
     <string name="playlist_added">Playlist ajoutée !</string>
     <string name="add_playlist">Ajouter une playlist</string>
     <string name="archive_music">Archiver les music</string>
+    <string name="playlist_updated">Playlist miase à jour !</string>
     <string name="playlist_deleted">Playlist supprimée !</string>
 
     <string name="loading_get_playlist_info">Récupération des infos de la playlist.</string>
@@ -9,5 +10,7 @@
     <string name="delete_playlist">Supprimer la playlist</string>
     <string name="confirm_delete_playlist">Voulez-vous vraiment supprimer %1$s ?</string>
     <string name="deleting_playlist">Suppression de %1$s…</string>
+
+    <string name="edit_playlist">Modifier la playlist</string>
 
 </resources>
