--- a/playlist/playlist_presentation/src/main/res/values/strings.xml
+++ b/playlist/playlist_presentation/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="archive_music">Archive music</string>
     <string name="playlist_updated">Playlist updated !</string>
     <string name="playlist_deleted">Playlist deleted !</string>
+    <string name="playlist_downloaded">Playlist downloaded !</string>
 
     <string name="loading_get_playlist_info">Getting playlist info.</string>
 
@@ -12,5 +13,8 @@
     <string name="deleting_playlist">Deleting %1$s…</string>
 
     <string name="edit_playlist">Edit Playlist</string>
+
+    <string name="download_playlist">Download Playlist</string>
+    <string name="confirm_download_playlist">Do you really want to download %1$s ?</string>
 
 </resources>
