Implemented download playlists.

--- a/playlist/playlist_presentation/src/main/res/values-fr/strings.xml
+++ b/playlist/playlist_presentation/src/main/res/values-fr/strings.xml
@@ -5,6 +5,7 @@
     <string name="playlist_updated">Playlist miase à jour !</string>
     <string name="playlist_deleted">Playlist supprimée !</string>
     <string name="playlist_downloaded">Playlist téléchargée !</string>
+    <string name="playlists_downloaded">Playlists téléchargées !</string>
 
     <string name="loading_get_playlist_info">Récupération des infos de la playlist.</string>
 
@@ -16,5 +17,8 @@
 
     <string name="download_playlist">Télécharger la playlist</string>
     <string name="confirm_download_playlist">Voulez-vous vraiment télécharger %1$s ?</string>
+
+    <string name="download_playlists">Télécharger les playlists</string>
+    <string name="confirm_download_playlists">Voulez-vous télécharger toutes les playlists ?</string>
 
 </resources>
