--- a/playlist/playlist_presentation/src/main/res/values-fr/strings.xml
+++ b/playlist/playlist_presentation/src/main/res/values-fr/strings.xml
@@ -1,11 +1,12 @@
 <resources>
     <string name="playlist_added">Playlist ajoutée !</string>
     <string name="add_playlist">Ajouter une playlist</string>
-    <string name="archive_music">Archiver les music</string>
+    <string name="archive_music">Archiver les musiques</string>
     <string name="playlist_updated">Playlist miase à jour !</string>
     <string name="playlist_deleted">Playlist supprimée !</string>
     <string name="playlist_downloaded">Playlist téléchargée !</string>
     <string name="playlists_downloaded">Playlists téléchargées !</string>
+    <string name="music_archived">Musiques archivées !</string>
 
     <string name="loading_get_playlist_info">Récupération des infos de la playlist.</string>
 
@@ -20,5 +21,7 @@
 
     <string name="download_playlists">Télécharger les playlists</string>
     <string name="confirm_download_playlists">Voulez-vous télécharger toutes les playlists ?</string>
+
+    <string name="confirm_archive_music">Voulez-vous vraiment supprimer les musiques de la playlist \"Remove\" ?</string>
 
 </resources>
