Implemented Music tab.

--- a/core/core_presentation/src/main/res/values-fr/strings.xml
+++ b/core/core_presentation/src/main/res/values-fr/strings.xml
@@ -3,6 +3,7 @@
     <string name="port_number">Numéro de Port</string>
     <string name="url">URL</string>
     <string name="name">Nom</string>
+    <string name="previous">Précédent</string>
     <string name="next">Suivant</string>
     <string name="edit">Modifier</string>
     <string name="enabled">Activé</string>
@@ -16,5 +17,7 @@
     <string name="retry">Réessayer</string>
     <string name="download">Télécharger</string>
     <string name="playlists">Playlists</string>
+    <string name="new_music">Nouvelles Musiques</string>
+    <string name="validate">Valider</string>
     <string name="serve_error">Erreur serveur : %1$s</string>
 </resources>
