--- a/core/core_presentation/src/main/res/values/strings.xml
+++ b/core/core_presentation/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="port_number">Port Number</string>
     <string name="url">URL</string>
     <string name="name">Name</string>
+    <string name="previous">Previous</string>
     <string name="next">Next</string>
     <string name="edit">Edit</string>
     <string name="enabled">Enabled</string>
@@ -16,5 +17,7 @@
     <string name="retry">Retry</string>
     <string name="download">Download</string>
     <string name="playlists">Playlists</string>
+    <string name="new_music">New Music</string>
+    <string name="validate">Validate</string>
     <string name="serve_error">Server error : %1$s</string>
 </resources>
