--- a/playlist/playlist_presentation/src/main/res/values-fr/strings.xml
+++ b/playlist/playlist_presentation/src/main/res/values-fr/strings.xml
@@ -2,7 +2,7 @@
     <string name="playlist_added">Playlist ajoutée !</string>
     <string name="add_playlist">Ajouter une playlist</string>
     <string name="archive_music">Archiver les musiques</string>
-    <string name="playlist_updated">Playlist miase à jour !</string>
+    <string name="playlist_updated">Playlist mise à jour !</string>
     <string name="playlist_deleted">Playlist supprimée !</string>
     <string name="playlist_downloaded">Playlist téléchargée !</string>
     <string name="playlists_downloaded">Playlists téléchargées !</string>
