--- a/core/core_presentation/src/main/res/values/strings.xml
+++ b/core/core_presentation/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="new_music">New Music</string>
     <string name="validate">Validate</string>
     <string name="serve_error">Server error : %1$s</string>
+    <string name="naming_rules">Naming Rules</string>
 </resources>
