--- a/music/music_presentation/src/main/res/values-fr/strings.xml
+++ b/music/music_presentation/src/main/res/values-fr/strings.xml
@@ -5,5 +5,6 @@
     <string name="artist">Artiste</string>
     <string name="edit_music">Modifier une musique</string>
     <string name="music_saved">Musiques sauvegardées !</string>
+    <string name="channel">Chaine</string>
 
 </resources>
