--- a/music/music_presentation/src/main/res/values/strings.xml
+++ b/music/music_presentation/src/main/res/values/strings.xml
@@ -5,5 +5,6 @@
     <string name="artist">Artist</string>
     <string name="edit_music">Edit Music</string>
     <string name="music_saved">Music saved !</string>
+    <string name="channel">Channel</string>
 
 </resources>
